<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/list_blocked_sms_all_tv_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/date"/>

    <RelativeLayout
        android:id="@+id/list_blocked_sms_all_rl_sender_blocked_sms_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">

        <ImageView
            android:id="@+id/list_blocked_sms_all_iv_sender_avatar"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:src="@drawable/ic_action_person"/>

        <TextView
            android:id="@+id/list_blocked_sms_all_tv_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/list_blocked_sms_all_iv_sender_avatar"
            android:text="@string/sender_phonenumber_name"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/list_blocked_sms_all_tv_sms_delivery_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_blocked_sms_all_tv_sender"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@+id/list_blocked_sms_all_iv_sender_avatar"
            android:text="@string/time"/>

        <ImageView
            android:id="@+id/list_blocked_sms_all_iv_more"
            android:layout_width="10dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_arrow_right"/>

        <TextView
            android:id="@+id/list_blocked_sms_all_tv_sms_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/list_blocked_sms_all_iv_more"
            android:layout_below="@+id/list_blocked_sms_all_tv_sender"
            android:layout_marginRight="16dp"

            android:layout_toLeftOf="@+id/list_blocked_sms_all_iv_more"
            android:text="@string/blocked_message_count"/>


    </RelativeLayout>
</LinearLayout>